
* Reformatted the Java source files.

* Fixed the package of the unit tests.

* Added serialVersionUID class field to Exception classes.

* Renamed the package.html files to package-info.java.

* Improved the package description of org.znerd.xmlenc.

* Removed superfluous files/directories, such as:
  - src/css/javadoc
  - src/css/checkstyle

* Converted unit tests from JUnit 3 to JUnit 4.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.53:

* Updated e-mailadresses of Ernst de Haan and Anthony Goubard.

* Slightly improved the XMLOutputter Javadoc class comments by mentioning
  whether XML Namespaces are supported.

* Removed some @since tags on private fields.

* Removed all @version and @author tags.

* Added method emptyTag(String) to class XMLOutputter. It can throw the (new)
  exception NoSuchElementException.

* Reformatted the Java source files.

* This library is now built with Maven instead of Ant.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.52:

* Generated package now has the prefix .tgz instead of .tar.gz.

* The tests are now included in the package.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.51:

* Added a parameter to the text(Writer, char) method in XMLEncoder to
  indicate if the ampersands should be escaped. The old method has been
  deprecated.

* Fixed: the text(Writer, char) method in XMLEncoder now correctly escapes the
  characters and throws an InvalidXMLException if a character is not valid.

* Improved performance and reduced size of the methods
  attribute(Writer, String, String, char, boolean) and
  and text(Writer, char[], int, int, boolean).

* Added more unit tests for the PCDATA section.

______________________________________________________________________________
CHANGES INTRODUCED IN XMLENC 0.50:
